# todomvc-htmx-rust-rocket

./: .gitignore  Cargo.toml  build.rs
src/: main.rs  view_renderer.rs
src/controllers/: home.rs  mod.rs  todos.rs
src/css/: todomvc-app-css.css
src/db/: mod.rs  todos.rs
src/models/: filter.rs  mod.rs  todo.rs
src/views/: edit_todo_item.tera  index.tera  todo_item.tera  todo_list.tera
